fixup build check manifest

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -121,9 +121,9 @@ jobs:
     - name: Docker Check Manifest
       if: always() && startsWith(github.ref, 'refs/tags/v')
       run: |
-        docker buildx imagetools inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }}
-        docker buildx imagetools inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }}
-        docker buildx imagetools inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }}
+        docker buildx imagetools inspect ${{ secrets.DOCKER_USERNAME }}/vpn:${{ steps.prepare.outputs.version }}
+        docker buildx imagetools inspect ${{ secrets.DOCKER_USERNAME }}/qb:${{ steps.prepare.outputs.version }}
+        docker buildx imagetools inspect ${{ secrets.DOCKER_USERNAME }}/qb-web:${{ steps.prepare.outputs.version }}
 
     - name: Clear
       if: always()
