--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,6 +3,7 @@ on:
   pull_request:
     branches:
       - 'master'
+      - 'dev'
       - 'v*'
     paths:
       - '.github/workflows/build.yaml'
@@ -12,6 +13,7 @@ on:
   push:
     branches:
       - 'master'
+      - 'dev'
       - 'v*'
     tags:
       - 'v*'
