--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,8 +2,8 @@ name: build
 on:
   pull_request:
     branches:
-      - 'master'
       - 'dev'
+      - 'master'
       - 'v*'
     paths:
       - '.github/workflows/build.yaml'
@@ -12,8 +12,8 @@ on:
       - '**/start.sh'
   push:
     branches:
-      - 'master'
       - 'dev'
+      - 'master'
       - 'v*'
     tags:
       - 'v*'
@@ -121,7 +121,7 @@ jobs:
           --file docker-compose.yaml
 
     - name: Docker Check Manifest
-      if: always() && startsWith(github.ref, 'refs/tags/v')
+      if: success() && startsWith(github.ref, 'refs/tags/v')
       run: |
         docker buildx imagetools inspect ${{ secrets.DOCKER_USERNAME }}/vpn:${{ steps.prepare.outputs.version }}
         docker buildx imagetools inspect ${{ secrets.DOCKER_USERNAME }}/qb:${{ steps.prepare.outputs.version }}
